Feitas algumas melhorias nos métodos, Atualizações na open api e criado o Recurso referente à Materiais.
